force-app/main/default/objects/Property__c/fields/City__c.field-meta.xml
<CustomField><fullName>City__c</fullName><label>City</label><required>true</required><type>Text</type><length>80</length></CustomField>