force-app/main/default/objects/Property__c/fields/Country__c.field-meta.xml
<CustomField><fullName>Country__c</fullName><label>Country</label><required>true</required><type>Text</type><length>80</length></CustomField>