force-app/main/default/objects/Property__c/fields/Furnishing_Status__c.field-meta.xml
<CustomField><fullName>Furnishing_Status__c</fullName><label>Furnishing Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Furnished</fullName><default>false</default><label>Furnished</label></value><value><fullName>Semi-Furnished</fullName><default>false</default><label>Semi-Furnished</label></value><value><fullName>Unfurnished</fullName><default>false</default><label>Unfurnished</label></value></valueSetDefinition></valueSet></CustomField>