force-app/main/default/objects/Property__c/fields/Location__c.field-meta.xml
<CustomField><fullName>Location__c</fullName><displayLocationInDecimal>true</displayLocationInDecimal><label>Location</label><scale>6</scale><type>Location</type></CustomField>