force-app/main/default/objects/Property__c/fields/Postal_Code__c.field-meta.xml
<CustomField><fullName>Postal_Code__c</fullName><label>Postal Code</label><required>true</required><type>Text</type><length>20</length></CustomField>