force-app/main/default/objects/Property__c/fields/Rent__c.field-meta.xml
<CustomField><fullName>Rent__c</fullName><label>Rent</label><precision>16</precision><required>true</required><scale>2</scale><type>Currency</type></CustomField>