force-app/main/default/objects/Property__c/fields/State__c.field-meta.xml
<CustomField><fullName>State__c</fullName><label>State</label><required>true</required><type>Text</type><length>80</length></CustomField>