force-app/main/default/objects/Property__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Occupied</fullName><default>false</default><label>Occupied</label></value><value><fullName>Available</fullName><default>true</default><label>Available</label></value></valueSetDefinition></valueSet></CustomField>