force-app/main/default/objects/Property__c/fields/Type__c.field-meta.xml
<CustomField><fullName>Type__c</fullName><label>Type</label><required>true</required><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Residential</fullName><default>false</default><label>Residential</label></value><value><fullName>Commercial</fullName><default>false</default><label>Commercial</label></value></valueSetDefinition></valueSet></CustomField>